maybe actually link the fuckin repo alright

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,8 @@
     <h2>About</h2>
 
     <p>Blahaj Clicker was created by <a href="https://finnley.dev">finnley</a> after an idea from <a href="https://skepsiskadser.de">skepsiskadser</a>.</p>
+    <p>GitHub Repo: <a href="https://github.com/ryzetech/BlahajClicker">https://github.com/ryzetech/BlahajClicker</a></p>
+    <p><b>Known Issues:</b><br><a href="https://github.com/ryzetech/BlahajClicker/issues/2">#2</a>: Click count jumpy due to servcer synchronisation</p>
   </div>
   <script src="control.js" type="text/javascript"></script>
   <script type="module">
