--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
 
     <p>Blahaj Clicker was created by <a href="https://finnley.dev">finnley</a> after an idea from <a href="https://skepsiskadser.de">skepsiskadser</a>.</p>
     <p>GitHub Repo: <a href="https://github.com/ryzetech/BlahajClicker">https://github.com/ryzetech/BlahajClicker</a></p>
-    <p><b>Known Issues:</b><br><a href="https://github.com/ryzetech/BlahajClicker/issues/2">#2</a>: Click count jumpy due to servcer synchronisation</p>
+    <p><b>Known Issues:</b><br><a href="https://github.com/ryzetech/BlahajClicker/issues/2">#2</a>: Click count jumpy due to server synchronisation</p>
   </div>
   <script src="control.js" type="text/javascript"></script>
   <script type="module">
